# MovieParser

./: .gitignore  README.md  main.py  models.py  my_films.db  pyproject.toml  run.py  schemas.py  service.py  views.py
alembic/versions/: 162a5a508f37_initial_migration.py
movieparser/: .gitignore  alembic.ini  main.py  models.py  schemas.py  service.py  views.py
movieparser/alembic/: env.py
movieparser/alembic/versions/: 5cbcdc498fdf_added_users.py
movieparser/templates/: add_film.html  films.html  login.html  register.html
templates/: films.html  index.html
