[tool.poetry]
name = "movieparser"
version = "0.1.0"
description = ""
authors = ["Spaceocean <spaceocean@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.24.0"
sqlalchemy = "^2.0.32"
webdriver-manager = "^4.0.2"
alembic = "^1.13.2"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
